--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Link1</a></li>
           <li><a href="#">Link2</a></li>
-          <li><a href="#">Link3-</a></li>
+          <li><a href="#">Link3</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
     
-  <div class="container-fluid">
+  <div class="container-fluid container-main">
     <div class="jumbotron jumboimg">
       <h1 id="main-header">Front End Showcase</h1>
       <button type="button" class="btn btn-info">Info</button>
@@ -55,7 +55,7 @@
   <h2>Things I've Learned</h2>
 
   <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12">
+    <div class="col-lg-3 col-md-6 col-sm-12 first-box">
         <h3>HTML</h3>
     </div><!---.end-col-->
      <div class="col-lg-3 col-md-6 col-sm-12">
@@ -64,13 +64,13 @@
      <div class="col-lg-3 col-md-6 col-sm-12">
       <h3>Js</h3>
     </div><!---.end-col-->
-    <div class="col-lg-3 col-md-6 col-sm-12">
+    <div class="col-lg-3 col-md-6 col-sm-12 last-box">
       <h3>Frameworks</h3>
     </div><!---.end-col-->
 
   </div><!---./end row-->
 
-  <div class="text-center">
+  <div class="text-center"><!---this is a bootstrap class that automatically centers the text within anything named in the class of text center-->
     <h2>Random GIFs</h2>
     <button class="btn btn-primary" id="random-gif-btn">Show Radnom GIFs</button>
     <div id="rndm-gif-container"></div>
